# claude-sentry

./: .gitignore  README.md  pyproject.toml
claude_sentry/: __init__.py  _tui_entry.py  app.py  core.py  hook.py  install.py  launch_hook.py  report.py  triage.py
examples/: README.md
examples/iterm2/: claude-with-sentry
examples/kitty/: claude-with-sentry  session-start-hook-snippet.sh
